add input number

--- a/gbsuftblai-ui/src/app/gbsu-ftb-lai-form/gbsu-ftb-lai-form.component.html
+++ b/gbsuftblai-ui/src/app/gbsu-ftb-lai-form/gbsu-ftb-lai-form.component.html
@@ -1,3 +1,7 @@
-<div class="container"> 
-    To Be Completed
+<div class="container">
+  <div class="form-group">
+    <label for="inputNumber">Number to convert</label>
+    <input class="form-control" id="inputNumber" type="text" alt="inputNumber" [formControl]="inputNumber"/>
+    <button class="btn btn-primary" (click)="submitNumber()">Convert</button>
+  </div>  
 </div>
